force-app/main/default/objects/leankor__Expense__c/leankor__Expense__c.object-meta.xml
<CustomObject>
    <description>A Leankor project cost or cost of goods delivered as part of a customer deliverable.</description>
    <label>Expense</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Expense Short Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>