force-app/main/default/objects/leankor__Expense__c/fields/leankor__ApprovingManager__c.field-meta.xml
<CustomField>
    <fullName>leankor__ApprovingManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the manager approving the expense. For very large expenses it will need to be filled out all the time.</description>
    <inlineHelpText>Select the manager or executive with approval permission for this expense.</inlineHelpText>
    <label>Approving Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ExpensesApproved</relationshipName>
    <type>Lookup</type>
</CustomField>