force-app/main/default/objects/leankor__Expense__c/fields/leankor__Category__c.field-meta.xml
<CustomField>
    <fullName>leankor__Category__c</fullName>
    <description>The high level categorization of the expense.</description>
    <inlineHelpText>Select the most appropriate category for this expense.</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Depreciation of Assets/Equipment</fullName>
            </value>
            <value>
                <fullName>Hotel</fullName>
            </value>
            <value>
                <fullName>Labor</fullName>
            </value>
            <value>
                <fullName>Manufactured Product</fullName>
            </value>
            <value>
                <fullName>Materials</fullName>
                <default>true</default>
                <label>Materials</label>
            </value>
            <value>
                <fullName>Meal</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Purchased Equipment</fullName>
            </value>
            <value>
                <fullName>Rental Equipment</fullName>
            </value>
            <value>
                <fullName>Revenue</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
            <value>
                <fullName>Employee Salary</fullName>
                <isActive>false</isActive>
                <label>Employee Salary</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>