force-app/main/default/objects/leankor__Expense__c/fields/leankor__Chargeable__c.field-meta.xml
<CustomField>
    <fullName>leankor__Chargeable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is checked if the expense should be invoiced to the customer.</description>
    <inlineHelpText>Check this box if the customer has agreed to cover this expense.</inlineHelpText>
    <label>Chargeable</label>
    <type>Checkbox</type>
</CustomField>