force-app/main/default/objects/leankor__Expense__c/fields/leankor__ContactSubmittingExpense__c.field-meta.xml
<CustomField>
    <fullName>leankor__ContactSubmittingExpense__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the same as the User lookup for person submitting expense, but uses the Contact object in case it must be a person who is not licensed to use Leankor but must be put in the database.</description>
    <inlineHelpText>You can optionally select a Contact for the person submitting the expense if they are not a Leankor or Salesforce user.</inlineHelpText>
    <label>Contact Submitting (Optional)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>