force-app/main/default/objects/leankor__Expense__c/fields/leankor__Date__c.field-meta.xml
<CustomField>
    <fullName>leankor__Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>The date of the expense. This is the date the expense was incurred.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the date the expense was incurred. If the expense should be recognized in phases or multiple payments, enter several different expense entries with future dates.</inlineHelpText>
    <label>Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>