force-app/main/default/objects/leankor__Expense__c/fields/leankor__DeliveredProduct__c.field-meta.xml
<CustomField>
    <fullName>leankor__DeliveredProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup to the exact product to which this expense will be attributed as a direct cost of goods sold.</description>
    <inlineHelpText>This expense directly resulted in the selected product or service being delivered.</inlineHelpText>
    <label>Delivered Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>ProjectExpense</relationshipName>
    <type>Lookup</type>
</CustomField>