force-app/main/default/objects/leankor__Expense__c/fields/leankor__ExpenseAccount__c.field-meta.xml
<CustomField>
    <fullName>leankor__ExpenseAccount__c</fullName>
    <label>Expense Account</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>leankor__ExpenseSubCategory__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>leankor__ExpenseAccount</valueSetName>
    </valueSet>
</CustomField>