force-app/main/default/objects/leankor__Expense__c/fields/leankor__ExpenseAllocationHours__c.field-meta.xml
<CustomField>
    <fullName>leankor__ExpenseAllocationHours__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Allocation hours of consumption.</description>
    <label>Expense Allocation Hours</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>