force-app/main/default/objects/leankor__Expense__c/fields/leankor__ExpenseAmount__c.field-meta.xml
<CustomField>
    <fullName>leankor__ExpenseAmount__c</fullName>
    <description>The expense amount.</description>
    <inlineHelpText>Enter the expense amount.</inlineHelpText>
    <label>Expense Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>