force-app/main/default/objects/leankor__Expense__c/fields/leankor__ExpenseCode__c.field-meta.xml
<CustomField>
    <fullName>leankor__ExpenseCode__c</fullName>
    <description>The accounting code for this expense item.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the expense code provided by the accounting department. This code must match your company&apos;s chart of accounts.</inlineHelpText>
    <label>Expense Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>