force-app/main/default/objects/leankor__Expense__c/fields/leankor__ExpenseHours__c.field-meta.xml
<CustomField>
    <fullName>leankor__ExpenseHours__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>Total consumption hours.</description>
    <label>Expense Hours</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>