force-app/main/default/objects/leankor__Expense__c/fields/leankor__ExpenseNumber__c.field-meta.xml
<CustomField>
    <fullName>leankor__ExpenseNumber__c</fullName>
    <description>This is used for when users wish to communicate in email or chat with accounting or their managers about a specific expense line item.</description>
    <displayFormat>E-{0000000000}</displayFormat>
    <inlineHelpText>This expense number is globally unique across all projects and portfolios.</inlineHelpText>
    <label>Expense Number</label>
    <type>AutoNumber</type>
</CustomField>