force-app/main/default/objects/leankor__Expense__c/fields/leankor__ExpenseTemplate__c.field-meta.xml
<CustomField>
    <fullName>leankor__ExpenseTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The expense template that this expense is cloned from. This is mainly used as a helper field for re-linking cloned expense when cloning a project.</description>
    <inlineHelpText>Select the expense template that this expense is to be cloned from.</inlineHelpText>
    <label>Expense Template</label>
    <referenceTo>leankor__Expense__c</referenceTo>
    <relationshipLabel>Expenses (Expense Template)</relationshipLabel>
    <relationshipName>ExpenseTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>