force-app/main/default/objects/leankor__Expense__c/fields/leankor__ForecastDate__c.field-meta.xml
<CustomField>
    <fullName>leankor__ForecastDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Forecast Date</label>
    <type>Date</type>
</CustomField>