force-app/main/default/objects/leankor__Expense__c/fields/leankor__IncludesTax__c.field-meta.xml
<CustomField>
    <fullName>leankor__IncludesTax__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is checked if the expense amount includes local, state / provincial or federal taxes.</description>
    <inlineHelpText>Check this if your expense amount includes any taxes.</inlineHelpText>
    <label>Includes Tax</label>
    <type>Checkbox</type>
</CustomField>