force-app/main/default/objects/leankor__Expense__c/fields/leankor__Invoiced__c.field-meta.xml
<CustomField>
    <fullName>leankor__Invoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is checked true when a proper invoice has been delivered to the customer.  This only makes sense if the &quot;chargeable&quot; flag is also set.</description>
    <inlineHelpText>If you check this on, please also make sure the expense has been checked as &quot;chargeable&quot; and this record is not marked as a &quot;planning entry&quot; (should be actual, not planned).</inlineHelpText>
    <label>Invoiced</label>
    <type>Checkbox</type>
</CustomField>