force-app/main/default/objects/leankor__Expense__c/fields/leankor__IsApproved__c.field-meta.xml
<CustomField>
    <fullName>leankor__IsApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Approved</label>
    <type>Checkbox</type>
</CustomField>