force-app/main/default/objects/leankor__Expense__c/fields/leankor__IsCapEx__c.field-meta.xml
<CustomField>
    <fullName>leankor__IsCapEx__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Capital Expense</label>
    <type>Checkbox</type>
</CustomField>