force-app/main/default/objects/leankor__Expense__c/fields/leankor__IsCurrForecast__c.field-meta.xml
<CustomField>
    <fullName>leankor__IsCurrForecast__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Current Forecast</label>
    <type>Checkbox</type>
</CustomField>