force-app/main/default/objects/leankor__Expense__c/fields/leankor__IsForecast__c.field-meta.xml
<CustomField>
    <fullName>leankor__IsForecast__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Forecast</label>
    <type>Checkbox</type>
</CustomField>