force-app/main/default/objects/leankor__Expense__c/fields/leankor__IsGenerated__c.field-meta.xml
<CustomField>
    <fullName>leankor__IsGenerated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is set when the amount is system calculated.</description>
    <label>Is Generated</label>
    <type>Checkbox</type>
</CustomField>