force-app/main/default/objects/leankor__Expense__c/fields/leankor__IsPrevForecast__c.field-meta.xml
<CustomField>
    <fullName>leankor__IsPrevForecast__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Previous Forecast</label>
    <type>Checkbox</type>
</CustomField>