force-app/main/default/objects/leankor__Expense__c/fields/leankor__KanbanCard__c.field-meta.xml
<CustomField>
    <fullName>leankor__KanbanCard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The work or activity card to which we apply this expense.</description>
    <inlineHelpText>Select the specific work or activity card to which this expense applies.</inlineHelpText>
    <label>Kanban Card</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Card does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>$Source.leankor__ProjectBoard__c</field>
            <operation>equals</operation>
            <valueField>leankor__KanbanCard__c.leankor__ValueStream__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>leankor__KanbanCard__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>