force-app/main/default/objects/leankor__Expense__c/fields/leankor__LongDescription__c.field-meta.xml
<CustomField>
    <fullName>leankor__LongDescription__c</fullName>
    <description>The long description of the expense which includes rich text like images of the receipt from a mobile device.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter a detailed explanation of the expense.</inlineHelpText>
    <label>Long Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>