force-app/main/default/objects/leankor__Expense__c/fields/leankor__OriginalPlannedExpense__c.field-meta.xml
<CustomField>
    <fullName>leankor__OriginalPlannedExpense__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Budget Record</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>leankor__Expense__c.leankor__IsForecast__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>leankor__Expense__c.leankor__Plan__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>leankor__Expense__c.leankor__Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.leankor__Project__c</valueField>
        </filterItems>
        <filterItems>
            <field>leankor__Expense__c.leankor__Category__c</field>
            <operation>equals</operation>
            <valueField>$Source.leankor__Category__c</valueField>
        </filterItems>
        <infoMessage>Select Original Budget Item (Not Forecast)</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>leankor__Expense__c</referenceTo>
    <relationshipLabel>Expenses (Original Budget Record)</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>