force-app/main/default/objects/leankor__Expense__c/fields/leankor__PaymentNotes__c.field-meta.xml
<CustomField>
    <fullName>leankor__PaymentNotes__c</fullName>
    <description>This area is for when customers are invoiced for an expense but maybe they only pay half or some portion. In that case, the user can type some notes here about the partial payment.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter exceptions here, such as partial payments or other issue with expense recovery.</inlineHelpText>
    <label>Payment Notes</label>
    <type>TextArea</type>
</CustomField>