force-app/main/default/objects/leankor__Expense__c/fields/leankor__PaymentReceived__c.field-meta.xml
<CustomField>
    <fullName>leankor__PaymentReceived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is checked on if there is confirmation of payment received from the accounting system.</description>
    <inlineHelpText>Check this on when full and complete payment from the customer is confirmed.</inlineHelpText>
    <label>Payment Received</label>
    <type>Checkbox</type>
</CustomField>