force-app/main/default/objects/leankor__Expense__c/fields/leankor__PersonSubmittingExpense__c.field-meta.xml
<CustomField>
    <fullName>leankor__PersonSubmittingExpense__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the User who is submitting the expense item. Important to track in case they need to get paid by the company or for reporting and security purpose.</description>
    <inlineHelpText>Select the person who made this expense item.</inlineHelpText>
    <label>Person Submitting Expense</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Email</field>
            <operation>equals</operation>
            <valueField>$User.Email</valueField>
        </filterItems>
        <infoMessage>Default filter will find your User record. To search other users, click the &quot;Show all results&quot; link below.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>