force-app/main/default/objects/leankor__Expense__c/fields/leankor__Plan__c.field-meta.xml
<CustomField>
    <fullName>leankor__Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is checked if the expense record is actually for a planned expense and not yet a real expense. We will use a lookup field to this same Expense object to link from actual expenses to the associated planned expense.</description>
    <inlineHelpText>If this expense entry is only for planning purposes, check this on. For actual expense entries, leave this unchecked.</inlineHelpText>
    <label>Planning Entry</label>
    <type>Checkbox</type>
</CustomField>