force-app/main/default/objects/leankor__Expense__c/fields/leankor__Portfolio__c.field-meta.xml
<CustomField>
    <fullName>leankor__Portfolio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The specific Leankor Portfolio to which this expense applies.</description>
    <inlineHelpText>Select the Leankor Portfolio to which this expense applies.</inlineHelpText>
    <label>Folder</label>
    <referenceTo>leankor__Portfolio__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>