force-app/main/default/objects/leankor__Expense__c/fields/leankor__Project__c.field-meta.xml
<CustomField>
    <fullName>leankor__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Leankor project to apply this expense toward.</description>
    <inlineHelpText>Select the Leankor project to which you wish to apply this expense.</inlineHelpText>
    <label>Project</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Project does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>$Source.leankor__Portfolio__c</field>
            <operation>equals</operation>
            <valueField>leankor__ProjectRoom__c.leankor__Portfolio__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>leankor__ProjectRoom__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>