force-app/main/default/objects/leankor__Expense__c/fields/leankor__ProjectBoard__c.field-meta.xml
<CustomField>
    <fullName>leankor__ProjectBoard__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a specific Leankor project to which we apply this expense.</description>
    <inlineHelpText>Select the Leankor project board to apply this expense.</inlineHelpText>
    <label>Project Board</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Board does not exist or does not match filter criteria.</errorMessage>
        <filterItems>
            <field>$Source.leankor__Project__c</field>
            <operation>equals</operation>
            <valueField>leankor__ValueStream__c.leankor__ProjectRoom__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>leankor__ValueStream__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>