force-app/main/default/objects/leankor__Expense__c/fields/leankor__ProjectFinancial__c.field-meta.xml
<CustomField>
    <fullName>leankor__ProjectFinancial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated project financial account.</description>
    <label>Project Financial</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>leankor__ProjectFinancial__c.leankor__Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.leankor__Project__c</valueField>
        </filterItems>
        <filterItems>
            <field>leankor__ProjectFinancial__c.leankor__AllowFinancialEntry__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>leankor__ProjectFinancial__c</referenceTo>
    <relationshipLabel>Expenses</relationshipLabel>
    <relationshipName>Expenses_ProjectFinancial</relationshipName>
    <type>Lookup</type>
</CustomField>