force-app/main/default/objects/leankor__Expense__c/fields/leankor__ProjectFinancialName__c.field-meta.xml
<CustomField>
    <fullName>leankor__ProjectFinancialName__c</fullName>
    <description>The name of the project financial.</description>
    <formula>leankor__ProjectFinancial__r.Name</formula>
    <label>Project Financial Name</label>
    <type>Text</type>
</CustomField>