force-app/main/default/objects/leankor__Expense__c/fields/leankor__ReferenceSourceId__c.field-meta.xml
<CustomField>
    <fullName>leankor__ReferenceSourceId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reference Source Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>