force-app/main/default/objects/leankor__Expense__c/fields/leankor__Reimbursable__c.field-meta.xml
<CustomField>
    <fullName>leankor__Reimbursable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is true if the expense was paid by an employee or contractor with their own money and they require reimbursement by the company.</description>
    <inlineHelpText>Check this box if the employee paid the expense with their personal funds.</inlineHelpText>
    <label>Reimbursable</label>
    <type>Checkbox</type>
</CustomField>