force-app/main/default/objects/leankor__Expense__c/recordTypes/leankor__ProductCost.recordType-meta.xml
<RecordType>
    <fullName>leankor__ProductCost</fullName>
    <active>true</active>
    <description>This is the direct cost of goods sold amount related to a service or product sold.</description>
    <label>Product Cost</label>
</RecordType>