force-app/main/default/objects/leankor__Expense__c/recordTypes/leankor__ProjectExpense.recordType-meta.xml
<RecordType>
    <fullName>leankor__ProjectExpense</fullName>
    <active>true</active>
    <description>This is a project expense directly attributed to the delivery of a service or product to the customer.</description>
    <label>Project Expense</label>
</RecordType>