force-app/main/default/objects/leankor__Expense__c/recordTypes/leankor__ProjectRevenue.recordType-meta.xml
<RecordType>
    <fullName>leankor__ProjectRevenue</fullName>
    <active>true</active>
    <description>This is project revenue from the delivery of a service or product to the customer.</description>
    <label>Project Revenue</label>
</RecordType>