force-app/main/default/objects/leankor__Expense__c/validationRules/leankor__FolderEntry.validationRule-meta.xml
<ValidationRule>
    <fullName>leankor__FolderEntry</fullName>
    <active>true</active>
    <description>Validation for &quot;Folder&quot; requirement.</description>
    <errorConditionFormula>IF(OR(ISBLANK(leankor__Portfolio__c), ISBLANK(leankor__ProjectFinancial__c)), FALSE, leankor__Portfolio__c &lt;&gt; leankor__ProjectFinancial__r.leankor__Project__r.leankor__Portfolio__c)</errorConditionFormula>
    <errorDisplayField>leankor__Portfolio__c</errorDisplayField>
    <errorMessage>Folder must be the same as the folder associated with the project financial.</errorMessage>
</ValidationRule>