force-app/main/default/objects/leankor__Expense__c/validationRules/leankor__ProjectEntry.validationRule-meta.xml
<ValidationRule>
    <fullName>leankor__ProjectEntry</fullName>
    <active>true</active>
    <description>Validation for &quot;Project&quot; requirement.</description>
    <errorConditionFormula>IF(OR(ISBLANK(leankor__Project__c), ISBLANK(leankor__ProjectFinancial__c)), FALSE, leankor__Project__c &lt;&gt; leankor__ProjectFinancial__r.leankor__Project__c)</errorConditionFormula>
    <errorDisplayField>leankor__Project__c</errorDisplayField>
    <errorMessage>Project must be the same as the project associated with the project financial.</errorMessage>
</ValidationRule>