force-app/main/default/objects/leankor__Expense__c/validationRules/leankor__ProjectFinancialEntry.validationRule-meta.xml
<ValidationRule>
    <fullName>leankor__ProjectFinancialEntry</fullName>
    <active>true</active>
    <description>Validation for &quot;ProjectFinancial&quot; requirement.</description>
    <errorConditionFormula>IF(ISBLANK(leankor__ProjectFinancial__c), FALSE, leankor__ProjectFinancial__r.leankor__AllowFinancialEntry__c = FALSE)</errorConditionFormula>
    <errorDisplayField>leankor__ProjectFinancial__c</errorDisplayField>
    <errorMessage>Project financial must allow transaction entry.</errorMessage>
</ValidationRule>