force-app/main/default/objects/leankor__Expense__c/listViews/leankor__Project_Expenses.listView-meta.xml
<ListView>
    <fullName>leankor__Project_Expenses</fullName>
    <columns>NAME</columns>
    <columns>leankor__Category__c</columns>
    <columns>leankor__Chargeable__c</columns>
    <columns>leankor__Date__c</columns>
    <columns>leankor__ExpenseAmount__c</columns>
    <columns>leankor__Project__c</columns>
    <filterScope>Everything</filterScope>
    <label>Project Expenses</label>
</ListView>